feat: basic navbar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GreenBite</title>
+
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="./vendors/normalize.css" />
+
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/home.css" />
   </head>
   <body>
-    <h1>Hey there</h1>
+    <section class="hero">
+      <header class="hero__header">
+        <div>
+          <div class="header__logo">
+            <span class="logo__accent">Green</span>Bite
+          </div>
+        </div>
+
+        <div class="hero__nav">
+          <ul class="hero__nav-list">
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">Tools</a></li>
+          </ul>
+
+          <button class="hero__nav-cta">Contact Us</button>
+        </div>
+      </header>
+    </section>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
