feat: hero background

--- a/index.html
+++ b/index.html
@@ -14,45 +14,45 @@
   <body>
     <!-- Hero Section -->
     <section class="hero">
-      <!-- Header -->
       <header class="header__header">
-        <div>
-          <div class="header__logo">
-            <span class="logo__accent">Green</span>Bite
+        <div class="header__container">
+          <div>
+            <div class="header__logo">
+              <span class="logo__accent">Green</span>Bite
+            </div>
+          </div>
+          <div class="header__nav">
+            <ul>
+              <li>
+                <a href="/recipes">Recipes</a>
+              </li>
+              <li class="header__nav-item--dropdown">
+                <a href="#" class="header__nav-link--dropdown">Tools</a>
+                <ul class="header__dropdown">
+                  <li>
+                    <a href="/nutrition-calculators">Nutrition Calculators</a>
+                  </li>
+                  <li>
+                    <a href="/workout-generator">Workout Generator</a>
+                  </li>
+                  <li>
+                    <a href="/mindfulness-activity">Mindfulness Activity</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <button class="header__nav-cta">
+              <a href="/contact">Contact Us</a>
+            </button>
           </div>
         </div>
-
-        <div class="header__nav">
-          <ul>
-            <li>
-              <a href="/recipes">Recipes</a>
-            </li>
-
-            <li class="header__nav-item--dropdown">
-              <a href="#" class="header__nav-link--dropdown">Tools</a>
-
-              <ul class="header__dropdown">
-                <li>
-                  <a href="/nutrition-calculators">Nutrition Calculators</a>
-                </li>
-
-                <li>
-                  <a href="/workout-generator">Workout Generator</a>
-                </li>
-
-                <li>
-                  <a href="/mindfulness-activity">Mindfulness Activity</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-
-          <button class="header__nav-cta">
-            <a href="/contact">Contact Us</a>
-          </button>
-        </div>
       </header>
+
+      <!-- Header -->
+      <div class="hero__container"></div>
     </section>
+
+    <footer></footer>
 
     <script src="./js/script.js"></script>
   </body>
