--- a/index.html
+++ b/index.html
@@ -24,25 +24,29 @@
           <div class="header__nav">
             <ul>
               <li>
-                <a href="/recipes">Recipes</a>
+                <a href="/recipes.html">Recipes</a>
               </li>
               <li class="header__nav-item--dropdown">
                 <a href="#" class="header__nav-link--dropdown">Tools</a>
                 <ul class="header__dropdown">
                   <li>
-                    <a href="/nutrition-calculators">Nutrition Calculators</a>
+                    <a href="/nutrition-calculators.html"
+                      >Nutrition Calculators</a
+                    >
                   </li>
                   <li>
-                    <a href="/workout-generator">Workout Generator</a>
+                    <a href="/workout-generator.html">Workout Generator</a>
                   </li>
                   <li>
-                    <a href="/mindfulness-activity">Mindfulness Activity</a>
+                    <a href="/mindfulness-activity.html"
+                      >Mindfulness Activity</a
+                    >
                   </li>
                 </ul>
               </li>
             </ul>
             <button class="header__nav-cta">
-              <a href="/contact">Contact Us</a>
+              <a href="/contact.html">Contact Us</a>
             </button>
           </div>
         </div>
