--- a/index.html
+++ b/index.html
@@ -53,7 +53,40 @@
       <div class="hero__bg" aria-hidden="true"></div>
 
       <!-- Header -->
-      <div class="hero__container"></div>
+      <div class="hero__container">
+        <div class="hero__content">
+          <div class="hero__group">
+            <figure class="hero__quote">
+              <blockquote
+                class="hero__quote-text"
+                aria-live="polite"
+              ></blockquote>
+            </figure>
+
+            <a href="#" class="hero__cta" role="button">
+              <span class="hero__cta-label">Explore Healthy living</span>
+              <svg
+                class="hero__cta-arrow"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+                focusable="false"
+              >
+                <path
+                  d="M12 4v14m0 0l-6-6m6 6l6-6"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
@@ -153,5 +186,6 @@
     </footer>
 
     <script src="./js/script.js"></script>
+    <script src="./js/home.js"></script>
   </body>
 </html>
