fix: minor quote issues

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             </figure>
 
             <a href="#" class="hero__cta" role="button">
-              <span class="hero__cta-label">Explore Healthy living</span>
+              <span class="hero__cta-label"
+                >Explore Healthy Living with GreenBite</span
+              >
               <svg
                 class="hero__cta-arrow"
                 width="18"
