feat: health and wellness section completed

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               ></blockquote>
             </figure>
 
-            <a href="#" class="hero__cta" role="button">
+            <a href="#tools" class="hero__cta" role="button">
               <span class="hero__cta-label"
                 >Explore Healthy Living with GreenBite</span
               >
@@ -87,6 +87,87 @@
               </svg>
             </a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Tools Section -->
+    <section id="tools" class="tools" aria-labelledby="tools-heading">
+      <div class="tools__container">
+        <header class="tools__header">
+          <h2 id="tools-heading">Health & Wellness Tools</h2>
+          <p>
+            Improve your health and daily routine with the diverse set of tools
+            that GreenBite offers
+          </p>
+        </header>
+
+        <div class="tools__grid">
+          <!-- Nutrition Calculators Card -->
+          <article class="tool-card">
+            <figure class="tool-card__media">
+              <img
+                class="tool-card__image"
+                src="./assets/images/home/hero_cards/nutrition-calculator.png"
+                alt="Nutrition Calculators illustration"
+              />
+              <figcaption class="tool-card__text">
+                <h3 class="tool-card__title">Nutrition Calculators</h3>
+                <p class="tool-card__desc">
+                  Calculate calories, macros and more tailored to your goals.
+                </p>
+              </figcaption>
+            </figure>
+            <div class="tool-card__actions">
+              <a class="tool-card__cta" href="/nutrition-calculators.html"
+                >Try it out</a
+              >
+            </div>
+          </article>
+
+          <!-- Workout Generator Card -->
+          <article class="tool-card">
+            <figure class="tool-card__media">
+              <img
+                class="tool-card__image"
+                src="./assets/images/home/hero_cards/workout-generator.png"
+                alt="Workout Generator illustration"
+              />
+              <figcaption class="tool-card__text">
+                <h3 class="tool-card__title">Workout Generator</h3>
+                <p class="tool-card__desc">
+                  Build effective workouts based on your equipment and time.
+                </p>
+              </figcaption>
+            </figure>
+            <div class="tool-card__actions">
+              <a class="tool-card__cta" href="/workout-generator.html"
+                >Try it out</a
+              >
+            </div>
+          </article>
+
+          <!-- Mindfulness Activity Card -->
+          <article class="tool-card">
+            <figure class="tool-card__media">
+              <img
+                class="tool-card__image"
+                src="./assets/images/home/hero_cards/mindfulness.png"
+                alt="Mindfulness Activity illustration"
+              />
+              <figcaption class="tool-card__text">
+                <h3 class="tool-card__title">Mindfulness Activity</h3>
+                <p class="tool-card__desc">
+                  Practice calm and focus with simple guided activities.
+                </p>
+              </figcaption>
+            </figure>
+            <div class="tool-card__actions">
+              <a class="tool-card__cta" href="/mindfulness-activity.html"
+                >Try it out</a
+              >
+            </div>
+          </article>
         </div>
       </div>
     </section>
