feat: header and footer in every page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header__container">
         <div>
           <div class="header__logo">
-            <span class="logo__accent">Green</span>Bite
+            <a href="/"><span class="logo__accent">Green</span>Bite</a>
           </div>
         </div>
         <div class="header__nav">
