--- a/mindfulness-activity.html
+++ b/mindfulness-activity.html
@@ -52,9 +52,9 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <section class="footer__links" aria-labelledby="footer-links-heading">
+        <section class="footer__links">
           <h2 id="footer-links-heading">Links</h2>
-          <nav class="footer__nav" aria-label="Footer">
+          <nav class="footer__nav">
             <ul>
               <li><a href="/recipes.html">Recipes</a></li>
               <li>
@@ -69,11 +69,11 @@
           </nav>
         </section>
 
-        <section class="footer__social" aria-labelledby="footer-social-heading">
+        <section class="footer__social">
           <h2 id="footer-social-heading">Social Media</h2>
           <ul class="footer__social-list">
             <li>
-              <a href="#" aria-label="Instagram">
+              <a href="#">
                 <img
                   src="https://cdn.simpleicons.org/instagram/111"
                   alt="Instagram"
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li>
-              <a href="#" aria-label="Facebook">
+              <a href="#">
                 <img
                   src="https://cdn.simpleicons.org/facebook/111"
                   alt="Facebook"
@@ -93,7 +93,7 @@
               </a>
             </li>
             <li>
-              <a href="#" aria-label="X">
+              <a href="#">
                 <img
                   src="https://cdn.simpleicons.org/x/111"
                   alt="X"
@@ -103,7 +103,7 @@
               </a>
             </li>
             <li>
-              <a href="#" aria-label="YouTube">
+              <a href="#">
                 <img
                   src="https://cdn.simpleicons.org/youtube/111"
                   alt="YouTube"
@@ -115,10 +115,7 @@
           </ul>
         </section>
 
-        <section
-          class="footer__subscribe"
-          aria-labelledby="footer-subscribe-heading"
-        >
+        <section class="footer__subscribe">
           <h2 id="footer-subscribe-heading">Subscribe to Newsletter</h2>
 
           <form class="footer__form" action="#" method="post" novalidate>
