--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./vendors/normalize.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/contact.css" />
   </head>
   <body class="page--inner">
     <header class="header__header header__header--always-solid">
@@ -47,8 +53,158 @@
     </header>
 
     <main class="page__main">
-      <h1>Contact Us</h1>
+      <section class="contact__intro">
+        <h1>Contact</h1>
+        <p>
+          Contact us for more information and some new information, dummy text
+          here obv
+        </p>
+      </section>
+
+      <section class="contact__content">
+        <form class="contact__form" action="#" method="post">
+          <div class="form__field">
+            <label for="name">Name <span class="form__required">*</span></label>
+            <input
+              id="name"
+              name="name"
+              type="text"
+              placeholder="John Doe"
+              required
+            />
+          </div>
+
+          <div class="form__field">
+            <label for="email"
+              >Email <span class="form__required">*</span></label
+            >
+            <input
+              id="email"
+              name="email"
+              type="email"
+              placeholder="john@doe.com"
+              required
+            />
+          </div>
+
+          <div class="form__field">
+            <label for="message"
+              >Message <span class="form__required">*</span></label
+            >
+            <textarea
+              id="message"
+              name="message"
+              rows="6"
+              placeholder="I am john doe obv"
+              required
+            ></textarea>
+          </div>
+
+          <div class="form__actions">
+            <button class="button button--primary" type="button">
+              Send Message
+            </button>
+          </div>
+        </form>
+
+        <aside class="contact__info">
+          <h2>Contact Information</h2>
+          <dl class="contact__details">
+            <div>
+              <dt>Email</dt>
+              <dd>
+                <i class="fa-solid fa-envelope contact__icon"></i>
+                hello@greenbite.com
+              </dd>
+            </div>
+            <div>
+              <dt>Phone</dt>
+              <dd>
+                <i class="fa-solid fa-phone contact__icon"></i> 07000000000
+              </dd>
+            </div>
+            <div>
+              <dt>Address</dt>
+              <dd>
+                <i class="fa-solid fa-location-dot contact__icon"></i> Some
+                address somewhere
+              </dd>
+            </div>
+          </dl>
+        </aside>
+      </section>
+
+      <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+
+        <div class="faq__list">
+          <article class="faq__item">
+            <button class="faq__question">
+              <span>What is this website about?</span>
+              <i class="fa-solid fa-chevron-down faq__chevron"></i>
+            </button>
+            <div class="faq__answer">
+              <p>
+                This website about the most randomly This website about the most
+                randomly This website about the most randomly
+              </p>
+            </div>
+          </article>
+
+          <article class="faq__item">
+            <button class="faq__question">
+              <span>What is this website about?</span>
+              <i class="fa-solid fa-chevron-down faq__chevron"></i>
+            </button>
+            <div class="faq__answer">
+              <p>
+                This website about the most randomly This website about the most
+                randomly This website about the most randomly
+              </p>
+            </div>
+          </article>
+
+          <article class="faq__item">
+            <button class="faq__question">
+              <span>What is this website about?</span>
+              <i class="fa-solid fa-chevron-down faq__chevron"></i>
+            </button>
+            <div class="faq__answer">
+              <p>
+                This website about the most randomly This website about the most
+                randomly This website about the most randomly
+              </p>
+            </div>
+          </article>
+
+          <article class="faq__item">
+            <button class="faq__question">
+              <span>What is this website about?</span>
+              <i class="fa-solid fa-chevron-down faq__chevron"></i>
+            </button>
+            <div class="faq__answer">
+              <p>
+                This website about the most randomly This website about the most
+                randomly This website about the most randomly
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
+
+    <section class="contact__map">
+      <div class="map__frame">
+        <iframe
+          id="gb-map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63315.08986973378!2d79.78616495!3d6.921837849999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596bdf4a3f57%3A0x9e6bf1d4298b2ff9!2sColombo!5e0!3m2!1sen!2slk!4v1710000000000!5m2!1sen!2slk"
+          style="border: 0"
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="footer__container">
@@ -144,5 +300,6 @@
     </footer>
 
     <script src="./js/script.js"></script>
+    <script src="./js/contact.js"></script>
   </body>
 </html>
