feat: working contact form with validation

--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
           </div>
 
           <div class="form__actions">
-            <button class="button button--primary" type="button">
+            <button class="button button--primary" type="submit">
               Send Message
             </button>
           </div>
@@ -192,6 +192,20 @@
         </div>
       </section>
     </main>
+
+    <div class="feedback-modal" hidden>
+      <div class="feedback-modal__backdrop"></div>
+      <div class="feedback-modal__dialog">
+        <div class="feedback-modal__header">
+          <h2 class="feedback-modal__title">Message sent</h2>
+          <button class="feedback-modal__close">×</button>
+        </div>
+
+        <div class="feedback-modal__content">
+          <p>Thanks for reaching out. We received your message.</p>
+        </div>
+      </div>
+    </div>
 
     <section class="contact__map">
       <div class="map__frame">
