perf: converted all the images to webp

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <figure class="tool-card__media">
               <img
                 class="tool-card__image"
-                src="./assets/images/home/hero_cards/nutrition-calculator.png"
+                src="./assets/images/home/hero_cards/nutrition-calculator.webp"
                 alt="Nutrition Calculators illustration"
               />
               <figcaption class="tool-card__text">
@@ -142,7 +142,7 @@
             <figure class="tool-card__media">
               <img
                 class="tool-card__image"
-                src="./assets/images/home/hero_cards/workout-generator.png"
+                src="./assets/images/home/hero_cards/workout-generator.webp"
                 alt="Workout Generator illustration"
               />
               <figcaption class="tool-card__text">
@@ -164,7 +164,7 @@
             <figure class="tool-card__media">
               <img
                 class="tool-card__image"
-                src="./assets/images/home/hero_cards/mindfulness.png"
+                src="./assets/images/home/hero_cards/mindfulness.webp"
                 alt="Mindfulness Activity illustration"
               />
               <figcaption class="tool-card__text">
