--- a/nutrition-calculators.html
+++ b/nutrition-calculators.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./vendors/normalize.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/nutrition-calculator.css" />
   </head>
   <body class="page--inner">
     <header
@@ -105,7 +106,153 @@
     </aside>
 
     <main class="page__main">
-      <h1>Nutrition Calculators</h1>
+      <section class="calculator__intro">
+        <h1>Nutrition Calculator</h1>
+        <p>Calculate your daily calorie needs and macronutrient breakdown</p>
+      </section>
+
+      <section class="calculator__content">
+        <div class="calculator__form-section">
+          <div class="calculator__form-header">
+            <h2>Enter Your Information</h2>
+            <p>
+              Input your age, gender, height, weight and activity level to
+              calculate your BMR, TDEE and the daily macro nutrient breakdown
+            </p>
+          </div>
+
+          <form class="calculator__form" id="nutritionForm">
+            <div class="form__row">
+              <div class="form__field">
+                <label for="age">Age</label>
+                <input
+                  type="number"
+                  id="age"
+                  name="age"
+                  required
+                  min="10"
+                  max="120"
+                />
+              </div>
+              <div class="form__field">
+                <label for="gender">Gender</label>
+                <select id="gender" name="gender" required>
+                  <option value="">Select gender</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form__row">
+              <div class="form__field">
+                <label for="height">Height (cm)</label>
+                <input
+                  type="number"
+                  id="height"
+                  name="height"
+                  required
+                  min="100"
+                  max="250"
+                />
+              </div>
+              <div class="form__field">
+                <label for="weight">Weight (kg)</label>
+                <input
+                  type="number"
+                  id="weight"
+                  name="weight"
+                  required
+                  min="30"
+                  max="200"
+                />
+              </div>
+            </div>
+
+            <div class="form__field">
+              <label for="activity">Activity Level</label>
+              <select id="activity" name="activity" required>
+                <option value="">Select activity level</option>
+                <option value="1.2">Sedentary (little or no exercise)</option>
+                <option value="1.375">
+                  Lightly active (light exercise 1-3 days/week)
+                </option>
+                <option value="1.55">
+                  Moderately active (moderate exercise 3-5 days/week)
+                </option>
+                <option value="1.725">
+                  Very active (hard exercise 6-7 days/week)
+                </option>
+                <option value="1.9">
+                  Super active (very hard exercise/physical job)
+                </option>
+              </select>
+            </div>
+
+            <div class="form__actions">
+              <button type="submit" class="button button--primary">
+                Calculate My Nutritional Needs
+              </button>
+            </div>
+          </form>
+        </div>
+
+        <div class="calculator__results" id="results" style="display: none">
+          <div class="results__left">
+            <div class="results__header">
+              <h2>Your Results</h2>
+            </div>
+
+            <div class="results__metrics">
+              <div class="metric__card">
+                <div class="metric__label">BMR (calories/day)</div>
+                <div class="metric__value metric__value--bmr">0</div>
+              </div>
+              <div class="metric__card">
+                <div class="metric__label">TDEE (calories/day)</div>
+                <div class="metric__value metric__value--tdee">0</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="results__right">
+            <div class="results__macros">
+              <h3>Daily Macronutrient Breakdown</h3>
+              <div class="macro__item">
+                <div class="macro__info">
+                  <span class="macro__label">Carbohydrates</span>
+                  <span class="macro__amount macro__amount--carbs"
+                    >0g (50%)</span
+                  >
+                </div>
+                <div class="macro__bar">
+                  <div class="macro__progress macro__progress--carbs"></div>
+                </div>
+              </div>
+              <div class="macro__item">
+                <div class="macro__info">
+                  <span class="macro__label">Protein</span>
+                  <span class="macro__amount macro__amount--protein"
+                    >0g (20%)</span
+                  >
+                </div>
+                <div class="macro__bar">
+                  <div class="macro__progress macro__progress--protein"></div>
+                </div>
+              </div>
+              <div class="macro__item">
+                <div class="macro__info">
+                  <span class="macro__label">Fat</span>
+                  <span class="macro__amount macro__amount--fat">0g (30%)</span>
+                </div>
+                <div class="macro__bar">
+                  <div class="macro__progress macro__progress--fat"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -202,5 +349,6 @@
     </footer>
 
     <script src="./js/script.js"></script>
+    <script src="./js/nutrition-calculator.js"></script>
   </body>
 </html>
