feat: pwa setup and favicon

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GreenBite | Contact</title>
 
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#00b86b" />
+    <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
+
     <link rel="stylesheet" href="./vendors/normalize.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
@@ -114,8 +118,8 @@
       <section class="contact__intro">
         <h1>Contact</h1>
         <p>
-          Contact us for more information and some new information, dummy text
-          here obv
+          Have a question, feedback, or partnership idea? Send us a message and
+          our team will get back to you shortly.
         </p>
       </section>
 
@@ -153,7 +157,7 @@
               id="message"
               name="message"
               rows="6"
-              placeholder="I am john doe obv"
+              placeholder="Tell us how we can help"
               required
             ></textarea>
           </div>
@@ -178,14 +182,14 @@
             <div>
               <dt>Phone</dt>
               <dd>
-                <i class="fa-solid fa-phone contact__icon"></i> 07000000000
+                <i class="fa-solid fa-phone contact__icon"></i> +94 70 123 4567
               </dd>
             </div>
             <div>
               <dt>Address</dt>
               <dd>
                 <i class="fa-solid fa-location-dot contact__icon"></i> Some
-                address somewhere
+                address in Colombo, Sri Lanka
               </dd>
             </div>
           </dl>
@@ -198,52 +202,54 @@
         <div class="faq__list">
           <article class="faq__item">
             <button class="faq__question">
-              <span>What is this website about?</span>
+              <span>What is GreenBite?</span>
               <i class="fa-solid fa-chevron-down faq__chevron"></i>
             </button>
             <div class="faq__answer">
               <p>
-                This website about the most randomly This website about the most
-                randomly This website about the most randomly
+                GreenBite helps you eat well, move more, and feel better with
+                practical tools like nutrition calculators, workouts, and
+                mindful activities.
               </p>
             </div>
           </article>
 
           <article class="faq__item">
             <button class="faq__question">
-              <span>What is this website about?</span>
+              <span>Are the recipes beginner‑friendly?</span>
               <i class="fa-solid fa-chevron-down faq__chevron"></i>
             </button>
             <div class="faq__answer">
               <p>
-                This website about the most randomly This website about the most
-                randomly This website about the most randomly
+                Yes. Every recipe includes clear steps, simple ingredients, and
+                nutrition info so anyone can cook confidently.
               </p>
             </div>
           </article>
 
           <article class="faq__item">
             <button class="faq__question">
-              <span>What is this website about?</span>
+              <span>How do the nutrition calculators work?</span>
               <i class="fa-solid fa-chevron-down faq__chevron"></i>
             </button>
             <div class="faq__answer">
               <p>
-                This website about the most randomly This website about the most
-                randomly This website about the most randomly
+                Enter a few details like age, height, weight, and activity
+                level. We estimate your daily needs and macro split using
+                standard formulas.
               </p>
             </div>
           </article>
 
           <article class="faq__item">
             <button class="faq__question">
-              <span>What is this website about?</span>
+              <span>Is GreenBite free to use?</span>
               <i class="fa-solid fa-chevron-down faq__chevron"></i>
             </button>
             <div class="faq__answer">
               <p>
-                This website about the most randomly This website about the most
-                randomly This website about the most randomly
+                Yes. All core tools are free. We may add optional premium
+                features later to support development.
               </p>
             </div>
           </article>
