--- a/mindfulness-activity.html
+++ b/mindfulness-activity.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GreenBite | Mindfulness Activity</title>
 
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#00b86b" />
+    <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
+
     <link rel="stylesheet" href="./vendors/normalize.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
