feat: changed header style

--- a/index.html
+++ b/index.html
@@ -28,21 +28,14 @@
             <li>
               <a href="/recipes.html">Recipes</a>
             </li>
-            <li class="header__nav-item--dropdown">
-              <a href="#" class="header__nav-link--dropdown">Tools</a>
-              <ul class="header__dropdown">
-                <li>
-                  <a href="/nutrition-calculators.html"
-                    >Nutrition Calculators</a
-                  >
-                </li>
-                <li>
-                  <a href="/workout-generator.html">Workout Generator</a>
-                </li>
-                <li>
-                  <a href="/mindfulness-activity.html">Mindfulness Activity</a>
-                </li>
-              </ul>
+            <li>
+              <a href="/nutrition-calculators.html">Nutrition Calculators</a>
+            </li>
+            <li>
+              <a href="/workout-generator.html">Workout Generator</a>
+            </li>
+            <li>
+              <a href="/mindfulness-activity.html">Mindfulness Activity</a>
             </li>
           </ul>
           <button class="header__nav-cta">
